--- a/house_price_dataset.ipynb
+++ b/house_price_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -334,6 +334,221 @@
    ],
    "source": [
     "train_data.isnull().sum()  #checking for missing values in the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Id', 'MSSubClass', 'MSZoning', 'LotFrontage', 'LotArea', 'Street',\n",
+       "       'Alley', 'LotShape', 'LandContour', 'Utilities', 'LotConfig',\n",
+       "       'LandSlope', 'Neighborhood', 'Condition1', 'Condition2', 'BldgType',\n",
+       "       'HouseStyle', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd',\n",
+       "       'RoofStyle', 'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType',\n",
+       "       'MasVnrArea', 'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual',\n",
+       "       'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1',\n",
+       "       'BsmtFinType2', 'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'Heating',\n",
+       "       'HeatingQC', 'CentralAir', 'Electrical', '1stFlrSF', '2ndFlrSF',\n",
+       "       'LowQualFinSF', 'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath', 'FullBath',\n",
+       "       'HalfBath', 'BedroomAbvGr', 'KitchenAbvGr', 'KitchenQual',\n",
+       "       'TotRmsAbvGrd', 'Functional', 'Fireplaces', 'FireplaceQu', 'GarageType',\n",
+       "       'GarageYrBlt', 'GarageFinish', 'GarageCars', 'GarageArea', 'GarageQual',\n",
+       "       'GarageCond', 'PavedDrive', 'WoodDeckSF', 'OpenPorchSF',\n",
+       "       'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea', 'PoolQC',\n",
+       "       'Fence', 'MiscFeature', 'MiscVal', 'MoSold', 'YrSold', 'SaleType',\n",
+       "       'SaleCondition', 'SalePrice'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Id                 int64\n",
+       "MSSubClass         int64\n",
+       "MSZoning          object\n",
+       "LotFrontage      float64\n",
+       "LotArea            int64\n",
+       "Street            object\n",
+       "Alley             object\n",
+       "LotShape          object\n",
+       "LandContour       object\n",
+       "Utilities         object\n",
+       "LotConfig         object\n",
+       "LandSlope         object\n",
+       "Neighborhood      object\n",
+       "Condition1        object\n",
+       "Condition2        object\n",
+       "BldgType          object\n",
+       "HouseStyle        object\n",
+       "OverallQual        int64\n",
+       "OverallCond        int64\n",
+       "YearBuilt          int64\n",
+       "YearRemodAdd       int64\n",
+       "RoofStyle         object\n",
+       "RoofMatl          object\n",
+       "Exterior1st       object\n",
+       "Exterior2nd       object\n",
+       "MasVnrType        object\n",
+       "MasVnrArea       float64\n",
+       "ExterQual         object\n",
+       "ExterCond         object\n",
+       "Foundation        object\n",
+       "                  ...   \n",
+       "BedroomAbvGr       int64\n",
+       "KitchenAbvGr       int64\n",
+       "KitchenQual       object\n",
+       "TotRmsAbvGrd       int64\n",
+       "Functional        object\n",
+       "Fireplaces         int64\n",
+       "FireplaceQu       object\n",
+       "GarageType        object\n",
+       "GarageYrBlt      float64\n",
+       "GarageFinish      object\n",
+       "GarageCars         int64\n",
+       "GarageArea         int64\n",
+       "GarageQual        object\n",
+       "GarageCond        object\n",
+       "PavedDrive        object\n",
+       "WoodDeckSF         int64\n",
+       "OpenPorchSF        int64\n",
+       "EnclosedPorch      int64\n",
+       "3SsnPorch          int64\n",
+       "ScreenPorch        int64\n",
+       "PoolArea           int64\n",
+       "PoolQC            object\n",
+       "Fence             object\n",
+       "MiscFeature       object\n",
+       "MiscVal            int64\n",
+       "MoSold             int64\n",
+       "YrSold             int64\n",
+       "SaleType          object\n",
+       "SaleCondition     object\n",
+       "SalePrice          int64\n",
+       "Length: 81, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.dtypes # datatypes of the variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['MSZoning', 'Street', 'Alley', 'LotShape', 'LandContour',\n",
+       "       'Utilities', 'LotConfig', 'LandSlope', 'Neighborhood', 'Condition1',\n",
+       "       'Condition2', 'BldgType', 'HouseStyle', 'RoofStyle', 'RoofMatl',\n",
+       "       'Exterior1st', 'Exterior2nd', 'MasVnrType', 'ExterQual',\n",
+       "       'ExterCond', 'Foundation', 'BsmtQual', 'BsmtCond', 'BsmtExposure',\n",
+       "       'BsmtFinType1', 'BsmtFinType2', 'Heating', 'HeatingQC',\n",
+       "       'CentralAir', 'Electrical', 'KitchenQual', 'Functional',\n",
+       "       'FireplaceQu', 'GarageType', 'GarageFinish', 'GarageQual',\n",
+       "       'GarageCond', 'PavedDrive', 'PoolQC', 'Fence', 'MiscFeature',\n",
+       "       'SaleType', 'SaleCondition'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#These are the variables which assume dicrete names as values.\n",
+    "categorical_variables=train_data.dtypes[train_data.dtypes=='object'].index.values\n",
+    "categorical_variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MSZoning          5\n",
+       "Street            2\n",
+       "Alley             3\n",
+       "LotShape          4\n",
+       "LandContour       4\n",
+       "Utilities         2\n",
+       "LotConfig         5\n",
+       "LandSlope         3\n",
+       "Neighborhood     25\n",
+       "Condition1        9\n",
+       "Condition2        8\n",
+       "BldgType          5\n",
+       "HouseStyle        8\n",
+       "RoofStyle         6\n",
+       "RoofMatl          8\n",
+       "Exterior1st      15\n",
+       "Exterior2nd      16\n",
+       "MasVnrType        5\n",
+       "ExterQual         4\n",
+       "ExterCond         5\n",
+       "Foundation        6\n",
+       "BsmtQual          5\n",
+       "BsmtCond          5\n",
+       "BsmtExposure      5\n",
+       "BsmtFinType1      7\n",
+       "BsmtFinType2      7\n",
+       "Heating           6\n",
+       "HeatingQC         5\n",
+       "CentralAir        2\n",
+       "Electrical        6\n",
+       "KitchenQual       4\n",
+       "Functional        7\n",
+       "FireplaceQu       6\n",
+       "GarageType        7\n",
+       "GarageFinish      4\n",
+       "GarageQual        6\n",
+       "GarageCond        6\n",
+       "PavedDrive        3\n",
+       "PoolQC            4\n",
+       "Fence             5\n",
+       "MiscFeature       5\n",
+       "SaleType          9\n",
+       "SaleCondition     6\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This displays the number of types of each of the categorical variables.\n",
+    "train_data[categorical_variables].apply(lambda x: len(x.unique()))"
    ]
   },
   {
