corrected first base

--- a/house_price_dataset.ipynb
+++ b/house_price_dataset.ipynb
@@ -235,16 +235,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "del train_data['Id']\n",
+    "del test_data['Id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1460, 81)"
+       "(1460, 80)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,127 +267,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Id                  0\n",
-       "MSSubClass          0\n",
-       "MSZoning            0\n",
-       "LotFrontage       259\n",
-       "LotArea             0\n",
-       "Street              0\n",
-       "Alley            1369\n",
-       "LotShape            0\n",
-       "LandContour         0\n",
-       "Utilities           0\n",
-       "LotConfig           0\n",
-       "LandSlope           0\n",
-       "Neighborhood        0\n",
-       "Condition1          0\n",
-       "Condition2          0\n",
-       "BldgType            0\n",
-       "HouseStyle          0\n",
-       "OverallQual         0\n",
-       "OverallCond         0\n",
-       "YearBuilt           0\n",
-       "YearRemodAdd        0\n",
-       "RoofStyle           0\n",
-       "RoofMatl            0\n",
-       "Exterior1st         0\n",
-       "Exterior2nd         0\n",
-       "MasVnrType          8\n",
-       "MasVnrArea          8\n",
-       "ExterQual           0\n",
-       "ExterCond           0\n",
-       "Foundation          0\n",
-       "                 ... \n",
-       "BedroomAbvGr        0\n",
-       "KitchenAbvGr        0\n",
-       "KitchenQual         0\n",
-       "TotRmsAbvGrd        0\n",
-       "Functional          0\n",
-       "Fireplaces          0\n",
-       "FireplaceQu       690\n",
-       "GarageType         81\n",
-       "GarageYrBlt        81\n",
-       "GarageFinish       81\n",
-       "GarageCars          0\n",
-       "GarageArea          0\n",
-       "GarageQual         81\n",
-       "GarageCond         81\n",
-       "PavedDrive          0\n",
-       "WoodDeckSF          0\n",
-       "OpenPorchSF         0\n",
-       "EnclosedPorch       0\n",
-       "3SsnPorch           0\n",
-       "ScreenPorch         0\n",
-       "PoolArea            0\n",
-       "PoolQC           1453\n",
-       "Fence            1179\n",
-       "MiscFeature      1406\n",
-       "MiscVal             0\n",
-       "MoSold              0\n",
-       "YrSold              0\n",
-       "SaleType            0\n",
-       "SaleCondition       0\n",
-       "SalePrice           0\n",
-       "Length: 81, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data.isnull().sum()  #checking for missing values in the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Id', 'MSSubClass', 'MSZoning', 'LotFrontage', 'LotArea', 'Street',\n",
-       "       'Alley', 'LotShape', 'LandContour', 'Utilities', 'LotConfig',\n",
-       "       'LandSlope', 'Neighborhood', 'Condition1', 'Condition2', 'BldgType',\n",
-       "       'HouseStyle', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd',\n",
-       "       'RoofStyle', 'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType',\n",
-       "       'MasVnrArea', 'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual',\n",
-       "       'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1',\n",
-       "       'BsmtFinType2', 'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'Heating',\n",
-       "       'HeatingQC', 'CentralAir', 'Electrical', '1stFlrSF', '2ndFlrSF',\n",
-       "       'LowQualFinSF', 'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath', 'FullBath',\n",
-       "       'HalfBath', 'BedroomAbvGr', 'KitchenAbvGr', 'KitchenQual',\n",
-       "       'TotRmsAbvGrd', 'Functional', 'Fireplaces', 'FireplaceQu', 'GarageType',\n",
-       "       'GarageYrBlt', 'GarageFinish', 'GarageCars', 'GarageArea', 'GarageQual',\n",
-       "       'GarageCond', 'PavedDrive', 'WoodDeckSF', 'OpenPorchSF',\n",
-       "       'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea', 'PoolQC',\n",
-       "       'Fence', 'MiscFeature', 'MiscVal', 'MoSold', 'YrSold', 'SaleType',\n",
-       "       'SaleCondition', 'SalePrice'],\n",
+       "Index(['MSSubClass', 'MSZoning', 'LotFrontage', 'LotArea', 'Street', 'Alley',\n",
+       "       'LotShape', 'LandContour', 'Utilities', 'LotConfig', 'LandSlope',\n",
+       "       'Neighborhood', 'Condition1', 'Condition2', 'BldgType', 'HouseStyle',\n",
+       "       'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd', 'RoofStyle',\n",
+       "       'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType', 'MasVnrArea',\n",
+       "       'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual', 'BsmtCond',\n",
+       "       'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1', 'BsmtFinType2',\n",
+       "       'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'Heating', 'HeatingQC',\n",
+       "       'CentralAir', 'Electrical', '1stFlrSF', '2ndFlrSF', 'LowQualFinSF',\n",
+       "       'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath', 'FullBath', 'HalfBath',\n",
+       "       'BedroomAbvGr', 'KitchenAbvGr', 'KitchenQual', 'TotRmsAbvGrd',\n",
+       "       'Functional', 'Fireplaces', 'FireplaceQu', 'GarageType', 'GarageYrBlt',\n",
+       "       'GarageFinish', 'GarageCars', 'GarageArea', 'GarageQual', 'GarageCond',\n",
+       "       'PavedDrive', 'WoodDeckSF', 'OpenPorchSF', 'EnclosedPorch', '3SsnPorch',\n",
+       "       'ScreenPorch', 'PoolArea', 'PoolQC', 'Fence', 'MiscFeature', 'MiscVal',\n",
+       "       'MoSold', 'YrSold', 'SaleType', 'SaleCondition', 'SalePrice'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data.columns"
+    "train_data.columns # all the features of the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['LotFrontage', 'Alley', 'MasVnrType', 'MasVnrArea', 'BsmtQual',\n",
+       "       'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2',\n",
+       "       'Electrical', 'FireplaceQu', 'GarageType', 'GarageYrBlt',\n",
+       "       'GarageFinish', 'GarageQual', 'GarageCond', 'PoolQC', 'Fence',\n",
+       "       'MiscFeature'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_columns=train_data.columns[train_data.isnull().any()]\n",
+    "null_columns # columns with missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LotFrontage      259\n",
+      "Alley           1369\n",
+      "MasVnrType         8\n",
+      "MasVnrArea         8\n",
+      "BsmtQual          37\n",
+      "BsmtCond          37\n",
+      "BsmtExposure      38\n",
+      "BsmtFinType1      37\n",
+      "BsmtFinType2      38\n",
+      "Electrical         1\n",
+      "FireplaceQu      690\n",
+      "GarageType        81\n",
+      "GarageYrBlt       81\n",
+      "GarageFinish      81\n",
+      "GarageQual        81\n",
+      "GarageCond        81\n",
+      "PoolQC          1453\n",
+      "Fence           1179\n",
+      "MiscFeature     1406\n",
+      "dtype: int64\n",
+      "Number of missing columns: 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Number of missing values in each column\n",
+    "print(train_data[null_columns].isnull().sum())\n",
+    "print('Number of missing columns: '+str(train_data[null_columns].isnull().any().sum()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -383,7 +376,6 @@
     {
      "data": {
       "text/plain": [
-       "Id                 int64\n",
        "MSSubClass         int64\n",
        "MSZoning          object\n",
        "LotFrontage      float64\n",
@@ -413,6 +405,7 @@
        "ExterQual         object\n",
        "ExterCond         object\n",
        "Foundation        object\n",
+       "BsmtQual          object\n",
        "                  ...   \n",
        "BedroomAbvGr       int64\n",
        "KitchenAbvGr       int64\n",
@@ -444,10 +437,10 @@
        "SaleType          object\n",
        "SaleCondition     object\n",
        "SalePrice          int64\n",
-       "Length: 81, dtype: object"
+       "Length: 80, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +469,7 @@
        "       'SaleType', 'SaleCondition'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,8 +482,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -541,7 +536,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,6 +544,65 @@
    "source": [
     "# This displays the number of types of each of the categorical variables.\n",
     "train_data[categorical_variables].apply(lambda x: len(x.unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alley      1369\n",
+      "MasVnrType      8\n",
+      "BsmtQual      37\n",
+      "BsmtCond      37\n",
+      "BsmtExposure      38\n",
+      "BsmtFinType1      37\n",
+      "BsmtFinType2      38\n",
+      "Electrical      1\n",
+      "FireplaceQu      690\n",
+      "GarageType      81\n",
+      "GarageFinish      81\n",
+      "GarageQual      81\n",
+      "GarageCond      81\n",
+      "PoolQC      1453\n",
+      "Fence      1179\n",
+      "MiscFeature      1406\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in categorical_variables:\n",
+    "    if i in null_columns:\n",
+    "        print(i,\"    \",train_data[i].isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In data description, we can see that \"Nan\" values of categorical variables are not missing value rather it representss the absence of that particular feature in house as represented by ctegorical variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encoding of variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
